fix: font-size being too large

--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ html {
 }
 
 #main-header {
-  font-size: 5rem;
+  font-size: 3vw;
   margin-bottom: 3vh;
 }
 
